исправил ошибку с ссылкой

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <p>
         <a href="cat.html">cat.html</a>
     </p>
+    <p>
+        <a href="tretyakovandrey.html">cat.html</a>
+    </p>
 
 </body>
 
